# deye-inverter

./: .gitignore  README.md  firmware.json  hacs.json  pyproject.toml  requirements_test.txt
custom_components/solarman_deye/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  discovery.py  manifest.json  sensor.py  server.py  strings.json  update.py
custom_components/solarman_deye/translations/: en.json  it.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_discovery.py  test_sensor.py  test_update.py
